Fixes some scrollbars

--- a/frontend/app/sass/serverboards.sass
+++ b/frontend/app/sass/serverboards.sass
@@ -188,9 +188,11 @@ code
     padding-bottom: 20%
     h1
       margin-top: 0px
-  > .extend
+  .extend
     flex-grow: 1
     overflow: hidden
+    display: flex
+    flex-direction: column
     > .ui.full.height
       max-height: calc( 100% - #{$top-height} )
 .ui.basic.plain.label
